# nonebot-plugin-gotify

./: .gitignore  .pdm-python  README.md  nonebot_plugin_gotify  pyproject.toml
nonebot_plugin_gotify/: __init__.py
nonebot_plugin_gotify/docs/zh/dev/: comm.md
