[project]
name = "nonebot-plugin-gotify"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "snowykami", email = "snowykami@outlook.com"},
]
dependencies = [
    "nonebot2>=2.3.3",
    "aiohttp>=3.10.10",
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false

[tool.pdm.dev-dependencies]
dev = [
    "nb-cli>=1.4.2",
]
