[project]
name = "nonebot-plugin-gotify"
dynamic = ["version"]
description = "Default template for PDM package"
authors = [
    { name = "snowykami", email = "snowykami@outlook.com" },
]
dependencies = [
    "nonebot2>=2.3.3",
    "aiohttp>=3.10.10",
    "magicoca>=1.0.5",
]
requires-python = ">=3.10"
readme = "README.md"
license = { text = "MIT" }
version = "0.1.0"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm.version]
source = "scm"
tag_filter = "v*"
tag_regex = '^v(?:\D*)?(?P<version>([1-9][0-9]*!)?(0|[1-9][0-9]*)(\.(0|[1-9][0-9]*))*((a|b|c|rc)(0|[1-9][0-9]*))?(\.post(0|[1-9][0-9]*))?(\.dev(0|[1-9][0-9]*))?$)$'

[tool.pdm.dev-dependencies]
dev = [
    "nb-cli>=1.4.2",
]
[tool.pdm]
distribution = true